// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React tree for provided and consumed components. Should correctly update subscribed to functional provider elements view.: Initial state. 1`] = `
<Memo(DS.Observer)>
  <DS.Consumer>
    <ExampleContextClassConsumer
      exampleContext={
        Object {
          "exampleActions": Object {
            "setExampleNumber": [Function],
            "setExampleString": [Function],
          },
          "exampleNumber": 0,
          "exampleString": "initial",
        }
      }
    >
      <span>
        {"exampleActions":{},"exampleNumber":0,"exampleString":"initial"}
      </span>
    </ExampleContextClassConsumer>
  </DS.Consumer>
</Memo(DS.Observer)>
`;

exports[`React tree for provided and consumed components. Should correctly update subscribed to functional provider elements view.: Updated state. 1`] = `
<Memo(DS.Observer)>
  <DS.Consumer>
    <ExampleContextClassConsumer
      exampleContext={
        Object {
          "exampleActions": Object {
            "setExampleNumber": [Function],
            "setExampleString": [Function],
          },
          "exampleNumber": 101010,
          "exampleString": "updated",
        }
      }
    >
      <span>
        {"exampleActions":{},"exampleNumber":101010,"exampleString":"updated"}
      </span>
    </ExampleContextClassConsumer>
  </DS.Consumer>
</Memo(DS.Observer)>
`;
